<resources>
    <string name="app_name">Cuan Sampah</string>
    <string name="welcome">Welcome to\nCuan Sampah</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create an Account</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="create_account_first">Create Your Account First!</string>
    <string name="username_hint">Username</string>
    <string name="phone_hint">Phone Number</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm">Confirm</string>

    <string name="reset_password">Reset your Password</string>
    <string name="title_reset_success">Reset Password Successful</string>
    <string name="content_reset_success">Your password has been changed! \n In the future don\'t forget \n your password!</string>

    <string name="title_home">Home</string>
    <string name="title_market">Market</string>
    <string name="title_camera">Camera</string>
    <string name="title_shipping">Shipping</string>
    <string name="title_profile">Profile</string>
    <string name="confirmation_header">Confirmation</string>
    <string name="success_header">Success</string>

    <string name="product_bahaya">Bahaya</string>
    <string name="pb_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque libero elit, vitae elementum nulla placerat vitae. Nullam et massa dignissim, fermentum nisl vitae, molestie lacus. Morbi sit amet velit non ligula dictum accumsan et vel sem. suscipit lectus. Donec sodales justo sit.</string>
    <string name="product_pengolahan">Pengolahan</string>
    <string name="pp_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit\n . Curabitur pellentesque libero elit, vitae elementum nulla placerat vitae.</string>
    <string name="poduct_weight">Weight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search product…</string>
    <string name="history">History</string>
    <string name="cart">Cart</string>
    <string name="ceban">Rp. 10.000,-</string>
    <string name="logout">Log out</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="my_items">My Items</string>
    <string name="my_address">My Address</string>
    <string name="nearby_collectors">Nearby Collectors</string>
    <string name="picked_up">Picked Up</string>
    <string name="bought">Bought</string>
    <string name="sold">Sold</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="empty_image">Image Not Found</string>
    <string name="description">Description</string>
    <string name="order_now">Order Now</string>
    <string name="product_content">Product Content</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="delivered_to">Delivered to</string>

    <string name="waste_detail">Waste Detail</string>
    <string name="total_income">Total Income</string>
    <string name="address_detail">Address Detail</string>
    <string name="done">Done</string>
    <string name="see_detail">See Detail</string>
    <!--    TEMPORARY   -->
    <string name="address">
        Zidane House\n
        0812-3456-7890\n
        Jl.Sleman Yogyakarta
    </string>
    <string name="tag_delivery">Delivery</string>
    <string name="jne">JNE</string>
    <string name="delivery_fee">(Rp. 10.000,-)</string>
    <string name="estimated_arrival">Estimated arrival:</string>
    <string name="filter">Filter</string>
    <string name="our_services">Our Services</string>
    <string name="tag_product">Product</string>
    <string name="tag_payment">Payment Method</string>
    <string name="order_header">Order</string>
    <string name="total_product_tag">Total product</string>
    <string name="total_order_tag">Total Order</string>
    <string name="tab_all">All</string>
    <string name="tab_in_progress">In Progress</string>
    <string name="tab_completed">Completed</string>
    <string name="tab_cancelled">Cancelled</string>
    <string name="continue_button">Continue</string>
    <string name="product_name">Nama Sampah</string>
    <string name="product_price">Rp.10.000,-</string>
    <string name="sell_to_collector">Sell to collector</string>
    <string name="kg">/kg</string>
    <string name="title_address">Your Address</string>
    <string name="open_maps">Open Maps</string>
    <string name="seller_address">User Address</string>
    <string name="continue_btn">Continue</string>
    <string name="title_collector_address">Collector Address</string>
    <string name="collector_address">Collector Address</string>
    <string name="kategori_title">Kategori</string>
    <string name="pk_content">Kategori produk</string>
    <string name="hint_address">Enter your address detail</string>
    <string name="sell_to_market">Sell to Market</string>

    <string-array name="data_product">
        <item>Botol plastik</item>
        <item>Botol air mineral</item>
        <item>Botol mineral</item>
    </string-array>

    <string-array name="data_price">
        <item>Rp. 10.000,-</item>
        <item>Rp. 13.000,-</item>
        <item>Rp. 6.000,-</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/trash_2</item>
        <item>@drawable/trash_1</item>
        <item>@drawable/trash_3</item>
    </integer-array>

    <string-array name="data_category">
        <item>Anorganic</item>
        <item>Plastic</item>
        <item>Plastic</item>
    </string-array>

    <string-array name="data_stock">
        <item>5 items</item>
        <item>10 items</item>
        <item>15 items</item>
    </string-array>

    <string-array name="data_weight">
        <item>2 kg</item>
        <item>2 kg</item>
        <item>2 kg</item>
    </string-array>

    <string-array name="data_desc">
        <item>Bahaya":"\n     Di lingkungan, plastik mencemari laut dan tanah, mengganggu ekosistem, dan dapat bertahan selama berabad-abad.\n     Plastik juga dapat menyebabkan kontaminasi makanan dan minuman dengan mikroplastik, yang berpotensi merusak kesehatan manusia dengan bahan kimia berbahaya seperti BPA dan ftalat.\n     "</item>
        <item>Lorem ipsum dolor sit amet</item>
        <item>Lorem ipsum dolor sit amet</item>
    </string-array>
</resources>