<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/successfull"
        android:contentDescription="@string/content_reset_success"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_reset_success"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_reset_success"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:textAlignment="center" />

    <com.capstone.cuansampah.view.customview.FilledButton
        android:id="@+id/btn_confirm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/continue_button"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="false" />


</LinearLayout>