<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.home.HomeFragment"
    android:scrollbars="none">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".view.camera.WasteInformationFragment">

    <ImageView
        android:id="@+id/imageWaste"
        android:layout_width="199dp"
        android:layout_height="152dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/image_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="376dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/product_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageWaste" />


    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/product_price"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />

    <TextView
        android:id="@+id/product_bahaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_bahaya"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_price" />

    <TextView
        android:id="@+id/pb_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pb_content"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_bahaya" />

    <TextView
        android:id="@+id/product_pengolahan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_pengolahan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_content" />

    <TextView
        android:id="@+id/pp_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pp_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_pengolahan" />

    <TextView
        android:id="@+id/product_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/poduct_weight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pp_content" />


    <ImageView
        android:id="@+id/ic_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_weight_nofill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_weight" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_weight_input"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:hint="Enter weight"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/ic_weight"
        app:layout_constraintTop_toBottomOf="@+id/product_weight">

        <com.capstone.cuansampah.view.customview.TextInput
            android:id="@+id/ed_weight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/product_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Address"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_weight" />

    <TextView
        android:id="@+id/user_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="User Address"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_address" />

    <Button
        android:id="@+id/openMap"
        android:layout_width="53dp"
        android:layout_height="32dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/white"
        android:drawableLeft="@drawable/location"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/product_address"
        app:layout_constraintTop_toBottomOf="@+id/edt_weight_input" />

    <Button
        android:id="@+id/btn_sell_waste"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_light"
        android:text="Sell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_address" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>