<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineHorizontal2"
            app:srcCompat="@drawable/image_login"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_back"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_login"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="54dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login"
            android:hint="@string/email_hint"
            app:errorEnabled="true">
            <com.capstone.cuansampah.view.customview.TextInput
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email"
            android:hint="@string/password_hint"
            app:errorEnabled="true">
            <com.capstone.cuansampah.view.customview.TextInput
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginEnd="32dp"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"/>

        <com.capstone.cuansampah.view.customview.FilledButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password"/>

        <TextView
            android:id="@+id/dont_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textSize="16sp"
            android:layout_marginStart="32dp"
            android:layout_marginVertical="32dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_register"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/emerald"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginVertical="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dont_have_acc"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.4"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal2"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.05"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>